# inf443-vcl

./: .gitignore  CMakeLists.txt
core/: instrumentor.hh  layer.hh  layer_stack.hh  named_object.hh
events/: application_event.hh  event.hh  mouse_event.hh  window_events.hh
scenes/examples/01_basic_usage/01_mesh_loader/: CMakeLists.txt
scenes/examples/01_basic_usage/02_hierarchy_texture/: CMakeLists.txt
scenes/examples/03_shader_effects/06_framebuffer_multipass/: CMakeLists.txt
scenes/examples/04_classical_effects/02_shadow/: CMakeLists.txt
scenes/inf443/03a_interpolation_position/: CMakeLists.txt
scenes/inf443/03a_interpolation_position/src/: interpolation.hpp
vcl/containers/buffer/: buffer.hpp
vcl/containers/buffer/test/: test_buffer.cpp
vcl/containers/buffer_stack/implementation/: buffer_stack.hpp
vcl/containers/buffer_stack/special_types/: special_types.cpp
vcl/containers/buffer_stack/test/: test_buffer_stack.cpp
vcl/containers/offset_grid/: offset_grid.cpp
vcl/display/image/: image.cpp  image.hpp
vcl/display/window/: window.cpp
vcl/files/: files.cpp  files.hpp
vcl/interaction/glfw_interaction/: glfw_interaction.cpp  glfw_interaction.hpp
vcl/interaction/gui/: gui.hpp
vcl/math/frame/: frame.cpp  frame.hpp
vcl/math/interpolation/: interpolation.hpp
vcl/math/projection/: projection.cpp  projection.hpp
vcl/math/quaternion/: quaternion.cpp  quaternion.hpp
vcl/math/rotation/: rotation.cpp
vcl/math/vec_mat/: vec_mat.hpp
vcl/shaders_preset/: shaders_preset.cpp
vcl/shape/curve/: curve.cpp  curve.hpp
vcl/shape/intersection/: intersection.cpp  intersection.hpp
vcl/shape/noise/: noise.cpp  noise.hpp
(+54 files in other folders)
